--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "bun-types": "^1.3.4",
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
+    "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.5",
     "typescript": "^5"
