--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/jszip": "^3.4.1",
     "@types/papaparse": "^5.5.2",
     "bcryptjs": "^3.0.3",
+    "canvas": "^3.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "jsonwebtoken": "^9.0.3",
