--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/jszip": "^3.4.1",
     "@types/papaparse": "^5.5.2",
+    "@types/uuid": "^11.0.0",
     "bcryptjs": "^3.0.3",
     "canvas": "^3.2.0",
     "class-variance-authority": "^0.7.1",
@@ -41,7 +42,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.1",
-    "uuid": "^11.1.0",
+    "uuid": "^13.0.0",
     "z-ai-web-dev-sdk": "^0.0.15"
   },
   "devDependencies": {
